# mtci

./: .gitignore  README.md  mtci.endpoint.yml  mtci.yml  pyproject.toml
.github/workflows/: ci.yml
assets/: sample.jsonl
src/mtci/: __init__.py  adapters.py  cli.py  config.py  data.py  execution.py  reporting.py  selection.py  server.py  state.py  testing_mrs.py
src/mtci/models/: __init__.py  simple.py
src/mtci/mrs/: __init__.py  base.py  batching.py  flake_demo.py  idempotence.py  serialization.py  whitespace.py
tests/: test_config.py  test_flake.py  test_integration_endpoint.py  test_junit.py  test_selection.py
